# PointLocationIn3DSubdivision

./: .gitmodules  CMakeLists.txt
CMakeUtilities/: add_unit_test_project.cmake
Patches/Klein/: 0002-Made-Klein-always-be-shared-library.patch  0003-Moved-shaders-to-qt-resources-Small-changes-in-cmake.patch  0003-Moved-shaders-to-qt-resources.patch  0004-Removed-sharing-of-shaders.patch
Patches/OBJ-Loader/: 0001-Created-CMakeLists-for-OBJ-Loader.patch
Patches/stlloader/: 0001-Added-cmakelists-to-stlloader.patch
Source/: CMakeLists.txt
Source/Math.Algos/: CMakeLists.txt
Source/Math.Algos/include/Math.Algos/: PointLocalizerVoxelized.h  Sqrt3Subdivision.h  VoxelGrid2MeshConverter.h  Voxelizer.h
Source/Math.Algos/src/: PointLocalizerVoxelized.cpp  Sqrt3Subdivision.cpp  VoxelGrid2MeshConverter.cpp  Voxelizer.cpp
Source/Math.Core/: CMakeLists.txt  Face.cpp  Mesh.cpp  Plane.cpp  Point3D.cpp  TransformMatrix.cpp  Triangle.cpp
Source/Math.Core/include/Math.Core/: API.h  BoundingBox.h  CommonUtilities.h  Face.h  Matrix.h  Mesh.h  MeshPoint.h  MeshTriangle.h  Plane.h  Point3D.h  TransformMatrix.h  Triangle.h  Vector3D.h  VectorUtilities.h
Source/Math.Core/src/: BoundingBox.cpp  CommonUtilities.cpp  Mesh.cpp  MeshPoint.cpp  MeshTriangle.cpp  Plane.cpp  Point3D.cpp  TransformMatrix.cpp  Triangle.cpp  Vector3D.cpp  VectorUtilities.cpp
Source/Math.Core/test/: CommonUtilitiesTests.cpp  main.cpp
Source/Math.DataStructures/: CMakeLists.txt
Source/Math.DataStructures/include/Math.DataStructures/: GenericKDTree.h  GenericOctree.h  TrianglesOctree.h  TrianglesTree.h  VoxelGrid.h
Source/Math.DataStructures/src/: TrianglesOctree.cpp  TrianglesTree.cpp  VoxelGrid.cpp
Source/Math.IO/: CMakeLists.txt
Source/Math.IO/include/Math.IO/: MeshIO.h
Source/Math.IO/src/: MeshIO.cpp
Source/Math.TestingBenchmark/: CMakeLists.txt
Source/Math.TestingBenchmark/src/: main.cpp
Source/PL3DS.Gui/: CMakeLists.txt  MainWindow3D.cpp  MainWindow3D.h  main.cpp
Source/PL3DS.Gui/include/PL3DS.Gui/: MainWidget.h  MainWindow3D.h  RenderablesModel.h
Source/PL3DS.Gui/include/PL3DS.Gui/Actions/: Actions.h
Source/PL3DS.Gui/include/PL3DS.Gui/Dialogs/: AddPointDialog.h  LocalizeDialog.h  SubdivideDialog.h  TranslateDialog.h
Source/PL3DS.Gui/include/PL3DS.Gui/Utilities/: GeneralUtilities.h  MeshesProxyModel.h  ProgressDialog.h
Source/PL3DS.Gui/src/: MainWidget.cpp  MainWidget.ui  MainWindow3D.cpp  RenderablesModel.cpp  main.cpp
Source/PL3DS.Gui/src/Actions/: Actions.cpp
Source/PL3DS.Gui/src/Dialogs/: AddPointDialog.cpp  AddPointDialog.ui  LocalizeDialog.cpp  LocalizeDialog.ui  SubdivideDialog.cpp  SubdivideDialog.ui  TranslateDialog.cpp  TranslateDialog.ui
Source/PL3DS.Gui/src/Utilities/: GeneralUtilities.cpp  MeshesProxyModel.cpp  ProgressDialog.cpp  ProgressDialog.ui
Source/Rendering.Core/: CMakeLists.txt
Source/Rendering.Core/include/Rendering.Core/: IRenderable.h  RenderableBox.h  RenderableMesh.h  RenderablePoint.h  RenderableSegment.h  RenderableTrianglesTree.h  RenderableVoxelGrid.h  RenderingUtilities.h
Source/Rendering.Core/src/: RenderableBox.cpp  RenderableMesh.cpp  RenderablePoint.cpp  RenderableSegment.cpp  RenderableTrianglesTree.cpp  RenderableVoxelGrid.cpp  RenderingUtilities.cpp
Source/Rendering.Main/: CMakeLists.txt
Source/Rendering.Main/include/Rendering.Main/: RenderableFactory.h  RenderablesController.h
Source/Rendering.Main/src/: RenderablesController.cpp
